# V2-node/API/services/User.service.js
@@ -4,7 +4,7 @@ const addresses = require('../models/Address.model');
 
 class UserService {
 
-  // cria um novo user
+  // Cria um novo usuário
   async createUser(data) {
     const existingUser = await this.getUserByEmail(data.email);
     if (existingUser) {
@@ -19,27 +19,56 @@ class UserService {
     return newUser;
   }
 
-
-  // lista todos os users
+  // Lista todos os usuários
   async getUsers() {
     return await User.find().exec();
   }
 
-  // encontra um user pelo id
+  // Encontra um usuário pelo ID
   async getUserById(id) {
     return await User.findById(id).exec();
   }
 
+  // Encontra um usuário pelo email
   async getUserByEmail(email) {
     return await User.findOne({ email }).exec();
   }
 
+  // Atualiza um usuário
   async updateUser(id, data) {
-    return await User.findByIdAndUpdate(id, data, { new: true }).exec();
+    try {
+      if (data.password) {
+        data.password = await bcrypt.hash(data.password, 10);
+      }
+
+      const updatedUser = await User.findByIdAndUpdate(id, data, {
+        new: true, // Retorna o documento atualizado
+        runValidators: true // Executa as validações antes de atualizar
+      }).exec();
+
+      if (!updatedUser) {
+        throw new Error('User not found');
+      }
+
+      return updatedUser;
+    } catch (error) {
+      // Fornece uma mensagem de erro mais detalhada
+      console.error(`Error updating user with ID ${id}:`, error.message);
+      throw new Error(`Failed to update user: ${error.message}`);
+    }
   }
 
+  // Deleta um usuário
   async deleteUser(id) {
-    await User.findByIdAndRemove(id).exec();
+    try {
+      const result = await User.findByIdAndDelete(id).exec();
+      if (!result) {
+        throw new Error('User not found');
+      }
+      return result;
+    } catch (error) {
+      throw new Error('User not found');
+    }
   }
 }
 
